--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Página Inicial</title>
+  <title>Express with authentication</title>
 </head>
 <body>
-  <h1>Ingrese la clave:</h1>
+  <h1>Express with authentication</h1>
+  <h6>( As an example, the key saved in the .env file is: 123 )</h6>
+  <h2>Insert the Key:</h2>
   <form action="/login" method="POST">
     <input type="text" name="clave" required>
-    <button type="submit">Ingresar</button>
+    <button type="submit">Log In</button>
   </form>
 </body>
 </html>
