--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,12 @@
 </head>
 <body>
   <h1>Express with authentication</h1>
-  <h6>( As an example, the key saved in the .env file is: 123 )</h6>
+  <h4>As an example, the keys saved in the .env file are: </h4>
+  <ul>
+    <li>KEY=123</li>
+    <li>ACCESS_PAGE_URL=/hidden.html</li>
+    <li>PORT=3000</li>
+  </ul>
   <h2>Insert the Key:</h2>
   <form action="/login" method="POST">
     <input type="text" name="clave" required>
